<resources>
    <string name="app_name">Inventory</string>
    <string name="empty_view_text">There are no books!</string>
    <string name="sale">Sale</string>
    <string name="add_book">Add a Book</string>
    <string name="edit_book">Edit a book</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="call_supplier">Call Supplier</string>
    <string name="editor_delete_book_failed">Failed to delete book</string>
    <string name="editor_book_delete_successful">Book deleted</string>
    <string name="enable_call_phone_permission">Enable call phone permission</string>
    <string name="editor_update_book_sucessful">Successfully updated book</string>
    <string name="editor_update_book_failed">Failed to update book</string>
    <string name="editor_create_book_failed">Failed to create book</string>
    <string name="editor_create_book_successful">Book created</string>
    <string name="editor_fields_required">All fields are required</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog_msg">Delete book?</string>
</resources>
